--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="d-flex justify-content-center mb-5">
-        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="800px" style="object-fit: cover;" alt="">
+        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="800px" style="object-fit: fill;" alt="">
     </div>
 
     <div class="row row-cols-1 row-cols-md-4 g-4" style="margin-right: 0!important; padding-left: 10px;">
@@ -23,9 +23,13 @@
                             {% endif %}
                             <p class="card-text"><small>Created {{ article.fromNow }}. </small></p>
                             <p class="card-text">{{ article.description }}</p></a> <br>
-                        <p class="card-text">{% for category in article.categories %}
-                                <i><b>{{ category.name }}</b> {{ category.articles | length }} articles with this category.</i>
+                            <p class="card-text">{% for category in article.categories %}
+                                <a href="/category/{{ category.slug }}"><i><b>{{ category.name }}</b> {{ category.articles | length }} articles with this category.</i></a>
                             {% endfor %}</p>
+                            <div>
+                                <a href="/show/{{ article.slug }}#comments"><div class="fa fa-comments"></div>
+                                {{ article.comments | length}}</a>
+                            </div>
                     </div>
                 </div>
             </div>
