--- a/templates/includes/commentSection.html.twig
+++ b/templates/includes/commentSection.html.twig
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center" style="margin-top: 100px; margin-bottom: 100px">
+<div class="container d-flex justify-content-center" id="comments" style="margin-top: 100px; margin-bottom: 100px">
     <div class="row" style="min-width: 70%">
         <div class="col-md-12">
 
@@ -45,6 +45,15 @@
                     {% endif %}
                 </div>
 
+                {% if app.user is empty %}
+                <div class="p-2 d-flex justify-content-center text-center" style="background-color: #fecea8;">
+                    <p>You must be logged in to post comments!
+                        <br>
+                        <br>
+                        <a class="button d-flex justify-content-center" href="/register">Create an account right away!</a>
+                    </p>
+                </div>
+                {% else %}
                 <div class="p-2 d-flex" style="background-color: #fecea8">
                     <div class="d-flex align-items-center" style="margin-right: 15px">
                         <img class="rounded-circle" src="/assets/images/Profile/{{ app.user.profile_photo }}" width="100" height="100" style="object-fit: cover;" alt="">
@@ -58,7 +67,7 @@
                     {{ form_end(form) }}
 
                 </div>
-
+                {% endif %}
             </div>
         </div>
     </div>
