--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -14,7 +14,7 @@
                 ></a>
 
             <!-- Personal Website -->
-            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="https://www.tomasspit-cv.online" role="button"
             ><i class="fab fa-at"></i
                 ></a>
 
@@ -34,7 +34,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #fecea8">
-        © 2020 Copyright:
+        © 2023 Copyright:
         <a class="footer-link" href="/">T-Store</a>
     </div>
     <!-- Copyright -->
