--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="/assets/images/logos/Logo-T-Store-Square-No-Slogan.png" height="60px" alt=""></a>
+        <h1 style="margin-right: 10px; color: #ff847c;">T-Store</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,7 +37,7 @@
                     </div>
                 </div>
             {% else %}
-                <a href="/login"><i class="fas fa-user fa-lg" style="color: #fecea8; margin-right: 10px"></i></a>
+                <a style="color: #fecea8!important;" href="/login">Login<i class="fas fa-user fa-lg" style="color: #fecea8; margin:0 10px"></i></a>
                 <a class="button ml-2" href="{{ path('app_register') }}">Sign up!</a>
             {% endif %}
         </div>
